hphp/hack/test/typecheck/inout/bad_inout_use_lvalue2.php.exp
File "bad_inout_use_lvalue2.php", line 8, characters 5-20:
You cannot decorate a constant as `inout` (Parsing[1002])
File "bad_inout_use_lvalue2.php", line 3, characters 7-16:
Please add a type hint `const SomeType SOME_CONST` (Naming[2001])
File "bad_inout_use_lvalue2.php", line 8, characters 11-20:
`inout` arguments may only be local variables or array indexing expressions  (NastCheck[3050])
